--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CoffeeTime">
-        <activity android:name=".ui.profile.ProfileActivity"></activity>
+        <activity android:name=".ui.product.ProductActivity"></activity>
+        <activity android:name=".ui.profile.ProfileActivity" />
         <activity android:name=".ui.history.HistoryActivity" />
         <activity android:name=".ui.cart.CartActivity" />
         <activity android:name=".admin.home.HomeAdminActivity" />
         <activity android:name=".ui.home.HomeActivity" />
         <activity android:name=".admin.WelcomeAdminActivity" />
-        <activity android:name=".admin.user.UserActivity" />
+        <activity android:name=".admin.user.UserAdminActivity" />
         <activity android:name=".admin.sales.SalesActivity" />
-        <activity android:name=".admin.product.ProductActivity" />
+        <activity android:name=".admin.product.ProductAdminActivity" />
         <activity android:name=".ui.WelcomeActivity" />
         <activity android:name=".auth.SignUpActivity" />
         <activity android:name=".auth.SignInActivity" />
